# jpeg-streaming-app

./: .gitignore  CMakeLists.txt  README.md  build.sh  make.sh
app/: CMakeLists.txt
app/src/: JpegStreaming.c
